# TextScreen

./: README.md  setup.cfg
docs/: todo.md
textscreen/: __main__.py  main.py
textscreen/objects/: screen.py
textscreen/views/: TEMPLATE.py  screen.py
