[metadata]
name = textscreen
version = attr: textscreen.__version__
description = textscreen
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
platforms = any
classifiers =
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/digiduncan/textscreen
    Tracker=https://github.com/digiduncan/textscreen/issues

[options]
packages = find:
python_requires = >=3.11
zip_safe = yes
include_package_data = True
install_requires =
    arcade==2.7.1.dev11
    requests==2.28.2
    digiformatter==0.5.7.2
    arrow==1.2.3

[options.extras_require]
dev =
    pytest==7.2.1
    flake8==6.0.0
    autopep8==2.0.1

[options.entry_points]
console_scripts =
    textscreen = textscreen.main:main

[flake8]
ignore = E501,W503,E114,E117,E128,E226,E302,E251,E116,E401,E741
per-file-ignores =
    */__init__.py:F401,F403
